--- a/templates/dap.j2
+++ b/templates/dap.j2
@@ -15,7 +15,7 @@ dynamic-access-policy-record {{ record.name }}
  action {{ record.action }}
 	{% endif %}
 	{% if record.message is defined %}
- user-message {{ record.message }}
+ user-message "{{ record.message }}"
 	{% endif %}
 {% endfor %}
 dynamic-access-policy-record DfltAccessPolicy
